--- a/static/views/home.ejs
+++ b/static/views/home.ejs
@@ -9,9 +9,11 @@
 <body>
 
 
-    
+    <h1>Mon Eau</h1>
+
     <form method="POST" action="/select_city">
-        <input name="data_form" id="city_code" type="text" id="numero" maxlength="5" pattern="\d{5}" title="Veuillez entrer exactement 5 chiffres.">
+        <p>Saisissez votre code postal :</p>
+        <input name="data_form" id="city_code" type="text" id="numero" maxlength="5" pattern="\d{5}" title="Veuillez entrer exactement 5 chiffres." value="31000">
         <button> button </button>
     </form>
 
